--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -12,11 +12,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: 'Poppins', sans-serif;
 }
 
 /* Body */
-body {
+body, html{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Poppins', sans-serif !important;
     background-color: var(--color-primary);
 }
 
@@ -62,6 +65,7 @@ body {
     font-size: 16px;
     text-decoration: none;
     transition: 0.5s;
+    font-family: 'Poppins', sans-serif !important;
 }
 .nav-link ul li a:hover {
     color: var(--color-quaternary);
@@ -82,7 +86,7 @@ body {
     width: 153px;
     height: 56px;
     border-radius: 50px;
-    transition: .5s;
+    transition: 0.5s;
 }
 #start-session:hover {
     background-color: var(--color-tertiary);
@@ -110,7 +114,10 @@ body {
 /* Main */
 /* Ainda precisa ser criado o conteudo */
 main {
+    width: 100%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Footer */
@@ -169,6 +176,7 @@ main {
     background-color: transparent;
     border: 1px solid rgba(255, 255, 255, 0.24);
     border-radius: 50px;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 .first-section-container .input-container input::placeholder {
@@ -188,12 +196,13 @@ main {
 .first-section-container .input-container button {
     width: 131px;
     height: 52px;
+    font-family: 'Poppins', sans-serif !important;
     background-color: var(--color-tertiary);
     color: var(--color-primary);
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    transition: .5s;
+    transition: 0.5s;
 }
 .first-section-container .input-container button:hover {
     background-color: transparent;
@@ -203,3 +212,53 @@ main {
 }
 
 /* Second Section */
+.second-container {
+    width: 1280px;
+    display: flex;
+    justify-content: space-between;
+    margin: 64px 0 80px 0;
+}
+.social-container {
+    width: 334px;
+    height: 145px;
+    display: flex;
+    flex-direction: column;
+}
+#social-icons {
+    display: flex;
+    width: 211px;
+    height: 40px;
+    gap: 46px;
+    margin-bottom: 41px;
+}
+#social-icons i {
+    font-size: 40px;
+    color: var(--color-quaternary);
+}
+.social-text-container {
+    color: var(--color-tertiary);
+    font-family: Poppins;
+}
+.link-footer-container{
+    width: 521px;
+    height: 108px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.link-footer {
+    width: 235px;
+    height: 108px;
+}
+.link-footer-container ul{
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    list-style-type: none;
+    margin: 0;
+}
+.link-footer-container ul li a{
+    text-decoration: none;
+    font-family: "Poppins";
+    color: var(--color-quaternary);
+}
