--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -16,13 +16,14 @@
 
 /* Body */
 body, html{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
     font-family: 'Poppins', sans-serif !important;
     background-color: var(--color-primary);
 }
-
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
 /* Header com Navbar */
 .header-container {
     width: 100%;
@@ -114,10 +115,10 @@ body, html{
 /* Main */
 /* Ainda precisa ser criado o conteudo */
 main {
-    width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    flex: 1;
+    height: 100%;
 }
 
 /* Footer */
