--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -44,6 +44,9 @@ body {
 .nav-logo {
     width: 185px;
 }
+.btn-hamburguer {
+    display: none;
+}
 .nav-link {
     width: 713px;
     height: auto;
