--- a/home_page/css/home_mobile.css
+++ b/home_page/css/home_mobile.css
@@ -58,7 +58,7 @@
         bottom: 30px;
         left: 24px;
         opacity: 0;
-        transition: opacity 0.4s ease-in-out;
+        transition: opacity 0.25s ease-in-out;
     }
     .nav-link.active #start-session {
         opacity: 1;
@@ -77,7 +77,7 @@
     .hamburger-container {
         margin-right: 20px;
     }
-    
+
     .btn-hamburger {
         display: flex;
         width: 40px;
@@ -110,17 +110,16 @@
     .btn-hamburger.active #hamburger {
         border-top: none;
     }
-    
+
     .btn-hamburger.active #hamburger::before {
         transform: rotate(135deg);
         top: 2px;
     }
-    
+
     .btn-hamburger.active #hamburger::after {
         transform: rotate(-135deg);
         top: -9px;
     }
-    
 
     /* Footer */
     .footer-container {
@@ -178,5 +177,24 @@
     }
     .link-footer-container ul {
         padding: 0;
+    }
+    .copy-container {
+        width: 100vw !important;
+        height: auto;
+    }
+    .copy {
+        flex-direction: column;
+        align-items: flex-start;
+        padding-left: 24px;
+    }
+    .copy ul {
+        flex-direction: column;
+        gap: 18px;
+        padding: 0;
+        margin: 28px 0 80px 0;
+    }
+    #order2 {
+        margin-bottom: 40px;
+        order: 2;
     }
 }
