--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -28,6 +28,7 @@ body {
 
 /* Header com Navbar */
 .header-container {
+    position: fixed;
     width: 100%;
     height: 108px;
     display: flex;
