--- a/home_page/css/home.css
+++ b/home_page/css/home.css
@@ -9,7 +9,7 @@
 
 body {
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 90%, rgba(8, 4, 25, 1) 100%), 
-    url('../img/background_body.svg');;
+    url('../img/background_body.jpg');;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
