--- a/home_page/css/home.css
+++ b/home_page/css/home.css
@@ -78,11 +78,12 @@ section.number-container {
 .numbers-container h4 {
     width: 240px;
 }
+
 /* Section title */
 .title {
     width: 100%;
     height: 240px;
-    margin-top: 436px;
+    margin-top: 400px;
     color: var(--color-quaternary);
 }
 
@@ -91,14 +92,19 @@ section.number-container {
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     min-width: 100%;
     height: 724px;
 }
+.carousel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .btn-galery {
     max-width: 1280px;
-    display: flex;
-    background-color: violet ;
+    width: 100%;
+    position: relative;
 }
 .btn-carousel {
     display: flex;
@@ -106,19 +112,76 @@ section.number-container {
     top: -80px;
 }
 .carousel-control-next {
-    right: 210px;
+    right: -40px;
     font-size: 22px;
 }
 .carousel-control-prev {
-    left: 210px;
+    left: -40px;
     font-size: 22px;
 }
 .carousel-inner {
-    max-height: 634px;
+    max-height: 724px;
 }
 .carosel-item {
-    max-height: 632px;
+    max-height: 724px;
 }
 
-
-/* Feedback Section */
+/* Section feedback */
+.feedback-container {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: 623px;
+    gap: 20px;
+}
+.btn-feedback .carousel-control-next {
+    right: -40px;
+    font-size: 22px;
+}
+.btn-feedback .carousel-control-prev {
+    left: -40px;
+    font-size: 22px;
+}
+.feedback-container {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+#feedback-img {
+    max-width: 413px;
+    width: 100%;
+    max-height: 623px;
+    height: 100%;
+}
+#feedback-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
+}
+#feedback-text {
+    max-width: 847px;
+    width: 100%;
+    max-height: 623px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: var(--color-quaternary);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 40px;
+}
+#feedback-text h3 {
+    margin: 0;
+    padding: 40px;
+    max-width: 767px;
+    width: 100%;
+    max-height: 408px;
+    height: 100%;
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 128%;
+}
+#feedback-text p {
+    margin: 0;
+    padding: 0 0 40px 40px;
+}
