--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -35,6 +35,8 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.08);
+    backdrop-filter: blur(20px);
+    z-index: 5;
 }
 .nav-container {
     max-width: 1280px;
@@ -44,6 +46,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index: 2;
 }
 .nav-logo {
     max-width: 185px;
@@ -99,7 +102,7 @@ body {
     transition: 0.5s;
 }
 #start-session:hover {
-    background-color: var(--color-tertiary);
+    background-color: var(--color-quaternary);
     color: var(--color-primary);
     transform: scale(1.05);
 }
