--- a/home_page/css/home_share.css
+++ b/home_page/css/home_share.css
@@ -200,13 +200,12 @@ main {
     color: rgba(255, 255, 255, 0.5);
     padding-left: 34px;
 }
-.input-container i {
+.input-container img {
     width: 20px;
     height: 20px;
     position: absolute;
     left: 24px;
     top: 32px;
-    font-size: 18px;
     color: #aaa;
 }
 
@@ -252,12 +251,12 @@ main {
     margin-bottom: 41px;
     cursor: pointer;
 }
-#social-icons i {
-    font-size: 40px;
-    color: var(--color-quaternary);
+#social-icons img {
+    width: 32px;
+    height: 32px;
     transition: 0.5s;
 }
-#social-icons i:hover {
+#social-icons img:hover {
     transform: scale(1.1);
     color: var(--color-tertiary);
 }
