--- a/home_page/css/home.css
+++ b/home_page/css/home.css
@@ -82,8 +82,8 @@ section.number-container {
 /* Section title */
 .title {
     width: 100%;
-    height: 240px;
-    margin-top: 400px;
+    height: 200px;
+    margin-top: 248px;
     color: var(--color-quaternary);
 }
 
@@ -93,8 +93,9 @@ section.number-container {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    min-width: 100%;
-    height: 724px;
+    max-width: 1280px;
+    width: 100%;
+    height: auto;
 }
 .carousel {
     display: flex;
@@ -112,11 +113,11 @@ section.number-container {
     top: -80px;
 }
 .carousel-control-next {
-    right: -40px;
+    right: -15px;
     font-size: 22px;
 }
 .carousel-control-prev {
-    left: -40px;
+    left: -15px;
     font-size: 22px;
 }
 .carousel-inner {
@@ -124,6 +125,12 @@ section.number-container {
 }
 .carosel-item {
     max-height: 724px;
+}
+#previous {
+    margin-right: 40px;
+}
+#next {
+    margin-left: 40px;
 }
 
 /* Section feedback */
@@ -137,11 +144,11 @@ section.number-container {
     gap: 20px;
 }
 .btn-feedback .carousel-control-next {
-    right: -40px;
+    right: -15px;
     font-size: 22px;
 }
 .btn-feedback .carousel-control-prev {
-    left: -40px;
+    left: -15px;
     font-size: 22px;
 }
 .feedback-container .carousel-inner {
@@ -199,7 +206,7 @@ section.number-container {
     max-width: 1280px;
     width: 100%;
     height: 632px;
-    margin-top: 400px;
+    margin-top: 248px;
     background-image: url('../img/baner_01.png');
     background-size: cover;
     background-position: center;
@@ -305,12 +312,6 @@ section.number-container {
 .price-card p {
     margin-top: 20px;
 }
-#price-basic-two {
-    margin-top: 100px;
-}
-#price-basic-tree {
-    margin-top: 200px;
-}
 
 /* section final-banner */
 section.final-banner {
@@ -318,7 +319,8 @@ section.final-banner {
     width: 100%;
     max-height: 557px;
     height: 100%;
-    margin-top: 400px;
+    margin-top: 248px;
+    margin-bottom: 232px;
 }
 .final-banner-container {
     width: 100%;
@@ -328,4 +330,20 @@ section.final-banner {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+.final-banner-container h3 {
+    position: absolute;
+    max-width: 612px;
+    width: 100%;
+    color: var(--color-quaternary);
+    bottom: 148px;
+    right: 205px;
+    font-size: 40px;
+    font-weight: bold;
+}
+.final-banner-container p {
+    position: absolute;
+    color: var(--color-quaternary);
+    bottom: 69px;
+    right: 709px;
 }
