--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -117,6 +117,21 @@ section.title-container {
     }
 }
 
+/* Container da seção de instrutores */
+
+.instrutores-container h2 { 
+    font-size: 40px; 
+    margin-bottom: 10px;
+    color: #f5f5f5; 
+} 
+
+.instrutor-card img { 
+    max-width: 413px;
+    height: 413px; 
+    object-fit: cover; 
+    border-radius: 10px; 
+    margin-bottom: 15px; 
+} 
 
 
 
