--- a/contacto/css/contacto.css
+++ b/contacto/css/contacto.css
@@ -43,11 +43,11 @@ section.title-container {
   margin: 0;
 }
 
-/* Formulário */
+/*.............................................Formulário */
 
 .contacts-form {
   display: flex;
-  gap: 40px;
+  gap: 200px;
 }
 
 .contacts-form__description,
@@ -59,6 +59,10 @@ section.title-container {
   color: #f5f5f5;
 }
 
+.contacts-form__title {
+  margin-bottom: 60px;
+}
+
 .contacts-form__group {
   background-color: rgba(247, 247, 247, 0.2);
   border-radius: 40px;
@@ -66,30 +70,26 @@ section.title-container {
 }
 
 .contacts-form__subtitle {
+  font-size: 24px;
   color: #f7f7f7;
   margin-bottom: 80px;
+  font-weight: 300;
 }
 
 .contacts-form__input,
 .contacts-form__textarea {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  border: 1px solid #f7f7f7;
   font-size: 16px;
-}
-
-.contacts-form__input {
-  height: 40px; /* Define uma altura fixa para os campos de input */
+  height: 60px;
+  border-radius: 10px;
+  background-color: transparent;
+  color: #f7f7f7;
 }
 
 .contacts-form__textarea {
-  height: 150px; /* Define uma altura fixa para a área de texto */
-}
-
-.contacts-form__field:nth-child(1),
-.contacts-form__field:nth-child(2) {
-  margin-top: 100px; /* Aplica uma distância de 100px entre o h4 e os campos de nome */
+  height: 150px;
 }
 
 .contacts-form__button {
@@ -99,4 +99,40 @@ section.title-container {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+/*.............................................Três formas de Contacto: Morada, Telefones, E-mail*/
+
+#threeContacts {
+  display: flex;
+  margin-top: 248px;
+  margin-bottom: 248px;
+  color: #f5f5f5;
+}
+
+.threeContacts__icon {
+  margin-right: 16px;
+}
+
+#threeContacts h4 {
+  margin-bottom: 60px;
+}
+
+.threeContacts__address,
+.threeContacts__phones,
+.threeContacts__email {
+  flex: 1 1 calc(50% - 20px);
+}
+
+/*.............................................Mapa*/
+section.map-container {
+  width: 100%;
+  height: 600px;
+  margin: 0;
+  padding: 0;
+}
+section.map-container iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
 }
