--- a/contacto/css/contacto.css
+++ b/contacto/css/contacto.css
@@ -9,6 +9,14 @@
 
 /* Main */
 main {
+  max-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+section.main-container {
   max-width: 1280px;
   width: 100%;
 }
@@ -47,7 +55,10 @@ section.title-container {
 
 .contacts-form {
   display: flex;
-  gap: 200px;
+  gap: 140px;
+  background-color: rgba(247, 247, 247, 0.2);
+  border-radius: 40px;
+  padding: 40px;
 }
 
 .contacts-form__description,
@@ -61,19 +72,16 @@ section.title-container {
 
 .contacts-form__title {
   margin-bottom: 60px;
+  font-size: 40px;
 }
 
-.contacts-form__group {
-  background-color: rgba(247, 247, 247, 0.2);
-  border-radius: 40px;
-  padding: 40px;
+#nomeEmail {
+  display: flex;
+  gap: 20px;
 }
 
-.contacts-form__subtitle {
-  font-size: 24px;
-  color: #f7f7f7;
-  margin-bottom: 80px;
-  font-weight: 300;
+#nomeEmail input {
+  width: 251px;
 }
 
 .contacts-form__input,
@@ -93,39 +101,98 @@ section.title-container {
 }
 
 .contacts-form__button {
-  background-color: #007bff; /* Cor do fundo do botão */
-  color: white;
-  padding: 10px 20px;
+  width: 184px;
+  height: 56px;
+  background-color: var(--color-tertiary);
+  color: var(--color-primary);
   border: none;
-  border-radius: 4px;
+  border-radius: 50px;
   cursor: pointer;
+  transition: 0.5s;
+  margin-top: 20px;
+}
+
+.contacts-form__button:hover {
+  background-color: transparent;
+  border: 1px solid var(--color-tertiary);
+  color: var(--color-tertiary);
+  transform: scale(1.05);
 }
 
 /*.............................................Três formas de Contacto: Morada, Telefones, E-mail*/
 
+/* BLOCO PRINCIPAL: threeContacts */
 #threeContacts {
   display: flex;
-  margin-top: 248px;
+  justify-content: space-between;
+  margin-top: 20px;
   margin-bottom: 248px;
-  color: #f5f5f5;
-}
-
-.threeContacts__icon {
-  margin-right: 16px;
 }
 
 #threeContacts h4 {
   margin-bottom: 60px;
 }
 
-.threeContacts__address,
-.threeContacts__phones,
-.threeContacts__email {
-  flex: 1 1 calc(50% - 20px);
+/* ELEMENTOS DO BLOCO: contacts__item */
+.contacts__item {
+  flex: 1 1 calc(33.33% - 20px);
+  display: flex;
+  justify-content: center;
+}
+
+/* Card principal */
+.card {
+  position: relative;
+  width: 413px;
+  height: auto;
+}
+
+/* Background do card */
+.card__background img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+/* Conteúdo do card */
+.card__content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  z-index: 2;
+}
+
+/* Cabeçalho do card */
+.card__header {
+  display: flex;
+  align-items: center;
+}
+
+/* Ícone do card */
+.card__icon {
+  height: 32px;
+  width: 32px;
+  flex-shrink: 0;
+}
+
+.card__title {
+  margin: 0;
+  font-size: 24px;
+}
+
+.card__text {
+  margin: 5px 0;
+  font-size: 16px;
 }
 
 /*.............................................Mapa*/
 section.map-container {
+  min-width: 100%;
   width: 100%;
   height: 600px;
   margin: 0;
