--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -63,15 +63,7 @@ section.title-container {
     border: none; /*remove as bordas padrão*/
     margin-bottom: 10px; /*espaçamento entre os itens*/
 }
-.hr.divider {
-    border: none;
-    height: 2px;
-    background-color: rgb(8, 4, 25);
-    border-top: 1px solid #a793f7;
-    margin: 15px 0;
-    width: 100%;
-    opacity: 0.5;
-}
+
 .accordion-img {
     max-width: 522px;
     width: 100%; /* ajustar o tamanho da imagem */
@@ -102,19 +94,33 @@ section.title-container {
     gap: 20px; /* Espaçamento entre a imagem e o texto */
 }
 
+/* INSTRUTORES */
+/* Ajusta o layout para os cards ficarem um ao lado do outro */
+.instrutores {
+    display: flex;   /* Usando Flexbox */
+    gap: 20px;   /* Espaçamento entre os cards */
+    justify-content: center;     /* Centraliza os cards horizontalmente */
+    flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
+    margin-top: 20px;   /* Adiciona um pouco de espaço no topo */
+}
 
 /* Container da seção de instrutores */
-
 .instrutores-container h2 { 
     font-size: 40px; 
     margin-bottom: 10px;
     color: #f5f5f5; 
 } 
 
+.instrutor-card {
+    width: 30%;      /* ajusta a largura para que fiquem mais próximos (ajuste conforme necessário) */
+    text-align: center;  /* alinha o texto dentro do card */
+    margin-bottom: 30px;   /* espaço inferior entre os cards */
+}
+
 .instrutor-card img { 
-    max-width: 413px;
+    max-width: 413px;/* imagem de acordo com o figma */
     height: 413px; 
-    object-fit: cover; 
+    object-fit: cover; /* ajusta a imagem para cobrir o espaço do card */
     border-radius: 10px; 
     margin-bottom: 15px; 
     
@@ -124,5 +130,6 @@ section.title-container {
 
 
 
- 
+
+
 
