--- a/home_page/css/home.css
+++ b/home_page/css/home.css
@@ -122,6 +122,7 @@ section.title-container {
     font-size: 22px;
 }
 .carousel-inner {
+    border-radius: 40px;
     max-height: 724px;
 }
 .carosel-item {
