--- a/contacto/css/contacto.css
+++ b/contacto/css/contacto.css
@@ -147,6 +147,7 @@ section.title-container {
   position: relative;
   width: 413px;
   height: auto;
+  border: none;
 }
 
 /* Background do card */
@@ -162,8 +163,8 @@ section.title-container {
 /* Conteúdo do card */
 .card__content {
   position: absolute;
-  top: 40px; /* Distância do topo */
-  left: 40px; /* Distância do lado esquerdo */
+  top: 40px;
+  left: 40px;
   text-align: left;
   z-index: 2;
 }
@@ -180,19 +181,22 @@ section.title-container {
   height: 24px;
   width: 24px;
   flex-shrink: 0;
+  color: #080419;
 }
 
 /* Título do card */
 .card__title {
   margin: 0;
   font-size: 24px;
+  font-weight: 500;
 }
 
 /* Texto do card */
 .card__text {
   margin: 5px 0;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
+  margin-bottom: 40px;
 }
 
 /*.............................................Mapa*/
@@ -202,9 +206,138 @@ section.map-container {
   height: 600px;
   margin: 0;
   padding: 0;
+  margin-bottom: 248px;
 }
 section.map-container iframe {
   width: 100%;
   height: 100%;
   border: none;
+}
+
+/*.............................................Media Query Pagina Contactos*/
+
+@media (max-width: 600px) {
+  body {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(255, 255, 255, 0) 90%,
+        rgba(8, 4, 25, 1) 100%
+      ),
+      url("../img/background_body_mobile.png");
+    background-position: center top;
+    background-size: cover;
+  }
+  .main-container {
+    width: 342px;
+  }
+  section.title-container {
+    max-width: 324px;
+    width: 100%;
+    padding: 300px 0 100px 0;
+  }
+  .main-container .title-container h2 {
+    font-size: 40px;
+    padding-left: 24px;
+  }
+
+  /*...............Formulário */
+  .contacts-form {
+    display: flex;
+    flex-direction: column;
+    width: 342px;
+    padding: 24px 20px;
+    margin: 0 auto;
+    gap: 24px;
+  }
+
+  .contacts-form__title {
+    font-size: 32px;
+    line-height: 120%;
+    margin-bottom: 20px;
+  }
+
+  .contacts-form__group {
+    width: 302px;
+    gap: 20px;
+    flex-direction: column;
+  }
+
+  #nomeEmail {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  #nomeEmail input {
+    width: 100%;
+  }
+
+  .contacts-form__input,
+  .contacts-form__textarea {
+    width: 100%;
+    height: auto;
+  }
+
+  .contacts-form__textarea {
+    height: 150px;
+  }
+
+  .contacts-form__button {
+    margin-top: 40px;
+    width: 100%;
+  }
+
+  /*...............Três formas de Contacto: Morada, Telefones, E-mail */
+
+  /* BLOCO PRINCIPAL: threeContacts */
+  #threeContacts {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+    margin-bottom: 164px;
+    padding: 0 24px;
+    box-sizing: border-box;
+  }
+
+  /* ELEMENTOS DO BLOCO: contacts__item */
+  .contacts__item {
+    flex: none;
+    width: 100%;
+    max-width: 342px;
+    display: flex;
+    justify-content: center;
+    border-radius: 40px;
+  }
+
+  /* Card principal */
+  .card {
+    width: 100%;
+    height: auto;
+  }
+
+  /* Background do card */
+  .card__background img {
+    width: 100%;
+    height: 100%;
+  }
+
+  /* Conteúdo do card */
+  .card__content {
+    top: 20px;
+    left: 20px;
+  }
+
+  /*...............Mapa */
+
+  /* Responsividade para o mapa */
+  section.map-container {
+    width: 100%;
+    height: 600px;
+    margin-bottom: 164px;
+  }
+
+  section.map-container iframe {
+    width: 100%;
+    height: 100%;
+  }
 }
