--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -108,11 +108,15 @@ button.accordion-button::after {
 .instrutores-container h2 { 
     font-size: 40px; 
     margin-bottom: 10px;
-    color: #f5f5f5; 
-    
-} 
+    color: #f5f5f5;    
+}
+
 
 /* Ajusta o layout para os cards ficarem um ao lado do outro */
+.instrutores-container{
+    margin-top: 200px;
+    height:813px;
+}
 .instrutores {
     
     flex-direction: column;
@@ -124,7 +128,6 @@ button.accordion-button::after {
     flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
     margin-top: 20px;   /* Adiciona um pouco de espaço no topo */
     flex-direction: column;
-    background-color: #a793f7;
     max-width: 413px;/* imagem de acordo com o figma */
     height: 413px; 
     
@@ -135,12 +138,10 @@ button.accordion-button::after {
     flex-direction: column;
     align-items: flex-start;
     border-radius: 40px;
-    
     gap: 20px;   /* Espaçamento entre os cards */
     justify-content: center;     /* Centraliza os cards horizontalmente */
     flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
     margin-top: 20px;   /* Adiciona um pouco de espaço no topo */
-    
     background-color: #a793f7;
     
 }
@@ -153,7 +154,8 @@ button.accordion-button::after {
     margin-bottom: 15px; 
     
     
-} 
+}
+
 
 
 
