--- a/treino/css/treino.css
+++ b/treino/css/treino.css
@@ -106,55 +106,65 @@ button.accordion-button::after {
 /* INSTRUTORES */
 /* Container da seção de instrutores */
 .instrutores-container h2 { 
-    font-size: 40px; 
-    margin-bottom: 10px;
+    font-size: 2rem; 
+    margin-bottom: 40px;
     color: #f5f5f5;    
 }
-
 
 /* Ajusta o layout para os cards ficarem um ao lado do outro */
 .instrutores-container{
     margin-top: 200px;
-    height:813px;
+    height: 813px;    
+
 }
 .instrutores {
-    
+    display: flex;   /* Usando Flexbox */
+    justify-content: center;     /* Centraliza os cards horizontalmente */
+    gap: 20px;   /* Espaçamento entre os cards */
+    flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
     flex-direction: column;
     align-items: flex-start;
     border-radius: 40px;
-    display: flex;   /* Usando Flexbox */
-    gap: 20px;   /* Espaçamento entre os cards */
-    justify-content: center;     /* Centraliza os cards horizontalmente */
-    flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
-    margin-top: 20px;   /* Adiciona um pouco de espaço no topo */
-    flex-direction: column;
-    max-width: 413px;/* imagem de acordo com o figma */
-    height: 413px; 
+    margin: 100px 0;   /* Adiciona um pouco de espaço no topo */
+    max-width: 1280px;/* imagem de acordo com o figma */
+    height: 743px; 
     
 }
-
 
 .instrutor-card {
-    flex-direction: column;
-    align-items: flex-start;
-    border-radius: 40px;
-    gap: 20px;   /* Espaçamento entre os cards */
-    justify-content: center;     /* Centraliza os cards horizontalmente */
-    flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */
-    margin-top: 20px;   /* Adiciona um pouco de espaço no topo */
+    width: 413px;
+    height: 743px;
     background-color: #a793f7;
-    
+    border-radius: 50px;
+    flex-direction: column;
+    align-items: flex-start; /* Espaçamento entre os cards */
+    justify-content: center;     /* Centraliza os cards horizontalmente */
+    flex-wrap: wrap;   /* Permite que os cards que não cabem na linha, desçam para a próxima linha */   /* Adiciona um pouco de espaço no topo */
+   
 }
-
 .instrutor-card img { 
     max-width: 413px;/* imagem de acordo com o figma */
     height: 413px; 
-    object-fit: cover; /* ajusta a imagem para cobrir o espaço do card */
     border-radius: 10px; 
-    margin-bottom: 15px; 
-    
-    
+       
 }
+.instrutor-card h3{    
+    padding: 0 40px;
+    margin-top: 15px;
+}
+
+.instrutor-card h6{    
+    padding: 0 40px;
+}
+
+.instrutor-card p{
+    width: 333px;
+    font-size: 16px;
+    height: 154px; 
+    padding: 40px;
+}
+
+
 
 
 
